documentacao_blocos/2.0.0/bloco_0.md
# Bloco 0 - Versão 2.0.0

**Data de Criação:** 2009-12-17  
**Páginas:** 10-24  
**Versão:** 2.0.0

---

--- Página 10 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
BLOCO 0: ABERTURA, IDENTIFICAÇÃO E REFERÊNCIAS.
REGISTRO 0000: ABERTURA DO ARQUIVO DIGITAL E IDENTIFICAÇÃO
DA ENTIDADE
Registro obrigatório e corresponde ao primeiro registro do arquivo.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0000”. C 004 - O
02 COD_VER Código da versão do leiaute conforme a tabela indicada N 003* - O
no Ato Cotepe .
03 COD_FIN Código da finalidade do arquivo: N 001 - O
0 - Remessa do arquivo original;
1 - Remessa do arquivo substituto.
04 DT_INI Data inicial das informações contidas no arquivo. N 008* - O
05 DT_FIN Data final das informações contidas no arquivo. N 008* - O
06 NOME Nome empresarial da entidade. C 100 - O
07 CNPJ Número de inscrição da entidade no CNPJ. N 014* - OC
08 CPF Número de inscrição da entidade no CPF. N 011* OC
09 UF Sigla da unidade da federação da entidade. C 002* - O
10 IE Inscrição Estadual da entidade. C 014 - O
11 COD_MUN Código do município do domicílio fiscal da entidade, N 007* - O
conforme a tabela IBGE
12 IM Inscrição Municipal da entidade. C - - OC
13 SUFRAMA Inscrição da entidade na Suframa C 009* - OC
14 IND_PERFIL Perfil de apresentação do arquivo fiscal; C 001 - O
A – Perfil A;
B – Perfil B.;
C – Perfil C.
15 IND_ATIV Indicador de tipo de atividade: N 001 - O
0 – Industrial ou equiparado a industrial;
1 – Outros.
Observações:
Nível hierárquico - 0
Ocorrência - um por arquivo.
Campo 01 - Valor Válido: [0000]
Campo 02 - Preenchimento: o código da versão do leiaute informado é validado conforme a data referenciada no campo
DT_FIN. Verificar na Tabela Versão, item 3.1.1 do Ato COTEPE/ICMS nº 09, de 18 de abril de 2008.
Validação: Válido para período informado. A versão do leiaute informada no arquivo deverá ser válida na data final da
escrituração (campo DT_FIN do Registro 0000).
Campo 03 - Valores Válidos: [0, 1]
Preenchimento: dentro do prazo normal de entrega o arquivo pode ser substituído. Após o vencimento do prazo de entre-
ga, consultar se a legislação da unidade federada do estabelecimento permite a substituição da EFD. Caso seja permitido,
verificar a exigência de autorização.
Campo 04 - Preenchimento: informar o período de validade das informações contidas neste registro; no padrão “diamêsa-
no” (ddmmaaaa), excluindo-se quaisquer caracteres de separação, tais como: ".", "/", "-".
O valor informado deve ser o primeiro dia do mês, exceto no caso de início de atividades ou de qualquer outro evento que
altere a forma e o período de escrituração fiscal do estabelecimento.
Campo 05 - Preenchimento: informar a última data do período da escrituração, no padrão “diamêsano” (ddmmaaaa),
excluindo-se quaisquer caracteres de separação, tais como: “.”, “/”, “-”.
Validação: Verifica se a data informada neste campo pertence ao mesmo mês/ano da data informada no campo DT_INI.
O valor informado deve ser o último dia do mesmo mês da data inicial, exceto no caso de encerramento de atividades ou de
qualquer outro fato determinante para paralisação das atividades do estabelecimento.
Página 10 de 158

--- Página 11 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
Campo 07 - Preenchimento: informar o número do CNPJ do contribuinte. Se o contribuinte for pessoa física (p.ex.: pro-
dutor rural), deixar o campo em branco.
Validação: será conferido o dígito verificador (DV) do CNPJ informado.
Campo 08 - Preenchimento: informar o número de inscrição do contribuinte no cadastro do CPF. Obrigatório, se o infor-
mante do arquivo for pessoa física e não obrigado à inscrição no CNPJ.
Validação: será conferido o dígito verificador (DV) do CPF informado.
Os campos CNPJ e CPF são mutuamente excludentes, ou seja, é obrigatório o preenchimento de apenas um deles.
Campo 09 - Validação: o valor deve ser a sigla da unidade da federação (UF) do informante.
Campo 10 - Validação: será conferido o dígito verificador (DV) da Inscrição Estadual informada, considerando-se a UF
do informante.
Campo 11 - Validação: o valor informado no campo deve existir na Tabela de Municípios do IBGE, possuindo 7 dígitos.
Campo 13 - Validação: será conferido o dígito verificador (DV) do número de inscrição na SUFRAMA, se informado.
Campo 14 - Valores Válidos: [A, B, C]
Preenchimento: informar o perfil de apresentação do arquivo, conforme definido pelo Fisco Estadual para o informante da
EFD. O arquivo será rejeitado se o declarante informar a EFD em perfil diferente do estabelecido.
Campo 15 - Valores Válidos: [0, 1]
Preenchimento: informar “0”, se o contribuinte é industrial ou equiparado a industrial, conforme legislação do Imposto
sobre Produtos Industrializados (IPI). Se o estabelecimento não se enquadrar no disposto nos art. 8º, 9º., 10º e 11º e cujas
operações não se enquadrem dentro do campo de incidência do IPI, conforme parágrafo único do art. 2º, todos do Decreto
nº 4.544/2002, ainda que seja uma indústria, deve informar a opção "1 - Outras" no campo IND_ATIV do registro 0000.
REGISTRO 0001: ABERTURA DO BLOCO 0
Este registro deve ser gerado para abertura do Bloco 0 e indica se há informações previstas para este bloco.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0001”. C 004 - O
02 IND_MOV Indicador de movimento: N 001 - O
0- Bloco com dados informados;
1- Bloco sem dados informados.
Observações:
Nível hierárquico - 1
Ocorrência – um por arquivo
Campo 01 - Valor Válido: [0001]
Campo 02 - Valor Válido: [0]
REGISTRO 0005: DADOS COMPLEMENTARES DA ENTIDADE
Registro obrigatório utilizado para complementar as informações de identificação do informante do arquivo.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0005” C 004 - O
02 FANTASIA Nome de fantasia associado ao nome empresarial. C 060 - O
03 CEP Código de Endereçamento Postal. N 008* - O
04 END Logradouro e endereço do imóvel. C 060 - O
05 NUM Número do imóvel. C - - OC
06 COMPL Dados complementares do endereço. C 060 - OC
07 BAIRRO Bairro em que o imóvel está situado. C 060 - O
Página 11 de 158

--- Página 12 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
08 FONE Número do telefone (DDD+FONE). C 10* - OC
09 FAX Número do fax. C 10* - OC
10 EMAIL Endereço do correio eletrônico. C - - OC
Observações:
Nível hierárquico - 2
Ocorrência – um por arquivo
Campo 01 - Valor Válido: [0005]
Campo 02 – Preenchimento: caso não possua nome de fantasia, preencher com parte da razão social pela qual é conheci-
da.
REGISTRO 0015: DADOS DO CONTRIBUINTE SUBSTITUTO
Registro obrigatório para todos os contribuintes substitutos tributários do ICMS, conforme definidos na legislação pertinen-
te. Deve ser gerado um registro para cada uma das inscrições estaduais cadastradas nas unidades federadas dos contribuin-
tes substituídos, ainda que não tenha tido movimentação no período, ficando obrigado à apresentação dos registros E200 e
filhos.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0015" C 004 - O
02 UF_ST Sigla da unidade da federação do contribuinte substituí- C 002* - O
do.
03 IE_ST Inscrição Estadual do contribuinte substituto na unidade C 014 - O
da federação do contribuinte substituído.
Observações:
Nível hierárquico - 2
Ocorrência – vários por arquivo
Campo 01 - Valor Válido: [0015]
Campo 02 - Preenchimento: informar a sigla da UF do contribuinte na condição de substituto tributário.
Validação: O valor deve ser a sigla de uma unidade da federação existente.
Campo 03 - Preenchimento: informar a inscrição estadual do contribuinte na unidade de federação onde ele estiver inscri-
to como contribuinte substituído.
Validação: valida a Inscrição Estadual, considerando-se a UF informada no registro.
REGISTRO 0100: DADOS DO CONTABILISTA
Registro utilizado para identificação do contabilista responsável pela escrituração fiscal do estabelecimento, mesmo que o
contabilista seja funcionário da empresa ou prestador de serviço.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0100”. C 004 - O
02 NOME Nome do contabilista. C 100 - O
03 CPF Número de inscrição do contabilista no CPF. N 011* - O
04 CRC Número de inscrição do contabilista no Conselho Regio- C 015 - O
nal de Contabilidade.
05 CNPJ Número de inscrição do escritório de contabilidade no N 014* - OC
CNPJ, se houver.
06 CEP Código de Endereçamento Postal. N 008* - OC
07 END Logradouro e endereço do imóvel. C 060 - OC
08 NUM Número do imóvel. C - - OC
09 COMPL Dados complementares do endereço. C 060 - OC
10 BAIRRO Bairro em que o imóvel está situado. C 060 - OC
11 FONE Número do telefone (DDD+FONE). C 10* - OC
Página 12 de 158

--- Página 13 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
12 FAX Número do fax. C 10* - OC
13 EMAIL Endereço do correio eletrônico. C - - OC
14 COD_MUN Código do município, conforme tabela IBGE. N 007* - OC
Observações:
Nível hierárquico - 2
Ocorrência – um por arquivo
Campo 01 - Valor válido: [0100]
Campo 02 - Preenchimento: informar o nome do contabilista responsável.
Campo 03 - Preenchimento: informar o número do CPF do contabilista responsável; não utilizar os caracteres especiais
de formatação, tais como: ".", "/", "-".
Validação: será conferido o dígito verificador (DV) do CPF informado.
Campo 04 - Preenchimento: informar o número de inscrição do contabilista no Conselho Regional de Contabilidade na
UF do estabelecimento.
Campo 05 - Preenchimento: informar o número de inscrição no Cadastro Nacional de Pessoa Jurídica do escritório de
contabilidade; não informar caracteres de formatação, tais como: ".", "/", "-".
Validação: será conferido o dígito verificador (DV) do CNPJ informado.
Campo 06 - Preenchimento: informar o número do Código de Endereçamento Postal - CEP, conforme cadastro nos
CORREIOS.
Campo 07 - Preenchimento: informar o endereço do contabilista/escritório de contabilidade.
Campo 13 - Preenchimento: informar o endereço de correio eletrônico do contabilista/escritório de contabilidade. Este
endereço de e-mail será utilizado para envio de correspondências.
Campo 14 - Preenchimento: informar o código do município do domicílio fiscal do contabilista/escritório de contabilida-
de.
Validação: o valor informado no campo deve existir na Tabela de Municípios do IBGE (combinação do código da UF e o
código de município), possuindo 7 dígitos.
REGISTRO 0150: TABELA DE CADASTRO DO PARTICIPANTE
Registro utilizado para informações cadastrais das pessoas físicas ou jurídicas envolvidas nas transações comerciais com o
estabelecimento, no período. Participantes sem movimentação no período não devem ser informados neste registro.
Obs.: Não devem ser informados como participantes os CNPJ e CPF citados nos registros C350 e C460.
O código a ser utilizado é de livre atribuição pelo contribuinte e possui validade apenas para o arquivo informado. Não
podem ser informados dois ou mais registros com o mesmo Código de Participante.
Para o caso de participante pessoa física com mais de um endereço, podem ser fornecidos mais de um registro, com os
mesmos NOME e CPF. Neste caso, deve ser usado um COD_PART para cada registro, alterando os demais dados.
As informações deste registro representam os dados atualizados no último dia da EFD.
Obs.: Vendas a consumidor final - Nas operações internas de vendas de produtos ou prestações de serviços a pessoas físicas
estrangeiras que temporariamente estejam residindo no Brasil, ou aqueles participantes que não possuem CPF, o campo
CPF poderá ser informado como “vazio” o que irá gerar Advertência pelo programa Validador, não impedindo a entrega.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0150”. C 004 - O
02 COD_PART Código de identificação do participante no arquivo. C 060 - O
03 NOME Nome pessoal ou empresarial do participante. C 100 - O
04 COD_PAIS Código do país do participante, conforme a tabela indi- N 005 - O
cada no item 3.2.1
05 CNPJ CNPJ do participante. N 014* - OC
06 CPF CPF do participante. N 011* - OC
07 IE Inscrição Estadual do participante. C 014 - OC
Página 13 de 158

--- Página 14 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
08 COD_MUN Código do município, conforme a tabela IBGE N 007* - OC
09 SUFRAMA Número de inscrição do participante na Suframa. C 009* - OC
10 END Logradouro e endereço do imóvel C 060 - O
11 NUM Número do imóvel C - - OC
12 COMPL Dados complementares do endereço C 060 - OC
13 BAIRRO Bairro em que o imóvel está situado C 060 - OC
Observações:
Nível hierárquico - 2
Ocorrência –vários por arquivo
Campo 01 - Valor válido: [0150]
Campo 02 - Preenchimento: informar o código de identificação do participante no arquivo.
Esta tabela pode conter COD_PART e respectivo registro 0150 com dados do próprio contribuinte informante, quando
apresentar documentos emitidos contra si próprio, em situações específicas (Exemplo: emissão de Nota Fiscal em operação
de retorno de produtos saídos para venda ambulante ou a negociar fora do estabelecimento).
Validação: o valor informado no campo COD_PART deve existir em pelo menos um registro dos demais blocos.
O código de participante, campo COD_PART, é de livre atribuição do estabelecimento, observado o disposto no item
2.4.2.1. do Ato COTEPE/ICMS nº 09, de 18 de abril de 2008.
Campo 04 - Preenchimento: informar o código do país, conforme tabela indicada no item 3.2.1 do Ato COTEPE/ICMS nº
09, de 18 de abril de 2008. O código de país pode ser informado com 05 caracteres ou com 04 caracteres (desprezando o
caractere “0” (zero) existente à esquerda).
Validação: o valor informado no campo deve existir na Tabela de Países. Informar, inclusive, quando o participante for
estabelecido ou residente no Brasil (01058 ou 1058).
Campo 05 - Preenchimento: informar o número do CNPJ do participante; não informar caracteres de formatação, tais
como: ".", "/", "-". Se COD_PAIS diferente de Brasil, o campo não deve ser preenchido.
Validação: é conferido o dígito verificador (DV) do CNPJ informado.
Somente um dos campos, CPF ou CNPJ, deve ser preenchido.
Campo 06 - Preenchimento: informar o número do CPF do participante; não utilizar os caracteres especiais de formata-
ção, tais como: “.”, “/”, “-”. Se COD_PAIS diferente de Brasil, o campo não deve ser preenchido.Validação: é conferido o
dígito verificador (DV) do CPF informado.
Somente um dos campos, CPF ou CNPJ, deve ser preenchido.
Os campos 05 e 06 são mutuamente excludentes, sendo obrigatório o preenchimento de um deles quando o campo 04 esti-
ver preenchido com “01058” ou “1058” (Brasil).
Campo 07 - Preenchimento:.
Validação: valida a Inscrição Estadual de acordo com a UF informada no campo COD_MUN (dois primeiros dígitos do
código de município).
Campo 08 - Preenchimento:.
Validação: o valor informado no campo deve existir na Tabela de Municípios do IBGE (combinação do código da UF e o
código de município), possuindo 7 dígitos.
Obrigatório se campo COD_PAIS for igual a “01058” ou “1058”(Brasil). Se for Exterior, informar campo “vazio” ou
preencher com o código “9999999”.
Campo 09 - Preenchimento: informar o número de Inscrição do participante na SUFRAMA, se houver.
Validação: é conferido o dígito verificador (DV) do número de inscrição na SUFRAMA, se informado.
Campo 10 - Preenchimento: informar o logradouro e endereço do imóvel. Se o participante for do exterior, preencher
inclusive com a cidade e país.
Página 14 de 158

--- Página 15 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
REGISTRO 0175: ALTERAÇÃO DA TABELA DE CADASTRO DE PARTICI-
PANTE
Este registro é de preenchimento obrigatório quando houver, dentro do período, alteração nos dados informados no Regis-
tro 0150, campos: NOME, COD_PAIS, CNPJ, CPF, IE, COD_MUN, SUFRAMA, END, NUM, COMPL e BAIRRO.
Não pode ser utilizado, em um mesmo arquivo, um mesmo código para representar um participante diferente do referenci-
ado anteriormente por tal código.
Os dados informados neste registro serão considerados até às 24:00 horas do dia anterior à data de alteração.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0175” C 004 - O
02 DT_ALT Data de alteração do cadastro N 008* - O
03 NR_CAMPO Número do campo alterado (Somente campos 03 a 13) C 002 - O
04 CONT_ANT Conteúdo anterior do campo C 100 - O
Observações:
Nível hierárquico - 3
Ocorrência - 1:N
Campo 01 - Valor Válido: [0175]
Campo 02 - Validação: o valor informado no campo deve estar entre o campo DT_INI e o campo DT_FIN do registro
0000.
Campo 03 - Preenchimento: informar o número do campo alterado, relativo ao registro 0150.
Campo 04 - os dados informados neste registro são válidos até às 24:00 horas do dia anterior à data de alteração.
REGISTRO 0190: IDENTIFICAÇÃO DAS UNIDADES DE MEDIDA
Este registro tem por objetivo descrever as unidades de medidas utilizadas no arquivo digital. Não podem ser informados
dois ou mais registros com o mesmo código de unidade de medida. Somente devem constar as unidades de medidas infor-
madas nos demais blocos.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0190" C 004 - O
02 UNID Código da unidade de medida C 006 - O
03 DESCR Descrição da unidade de medida C - - O
Observações:
Nível hierárquico: 2
Ocorrência: vários por arquivo
Campo 01 - Valor Válido: [0190]
Campo 02 - Validação: o valor informado neste campo deve existir em pelo menos um registro dos demais Blocos.
REGISTRO 0200: TABELA DE IDENTIFICAÇÃO DO ITEM (PRODUTO E
SERVIÇOS)
Este registro tem por objetivo informar mercadorias, serviços, produtos ou quaisquer outros itens concernentes às transa-
ções fiscais.
Quando ocorrer alteração somente na descrição do item, sem que haja descaracterização deste, ou seja, criação de um novo
item, a alteração deve constar no registro 0205.
Só devem ser apresentados itens referenciados nos demais blocos.
A identificação do item (produto ou serviço) deverá receber o mesmo código em qualquer documento, lançamento efetuado
ou arquivo informado observando-se que:
a) O código utilizado não pode ser duplicado ou atribuído a itens (produto ou serviço) diferentes. Os produtos e
serviços que sofrerem alterações em suas características básicas deverão ser identificados com códigos diferentes. Em caso
de alteração de codificação, deverão ser informados o código e a descrição anteriores e as datas de validade inicial e final;
b) Não é permitida a reutilização de código que tenha sido atribuído para qualquer produto anteriormente.
Página 15 de 158

--- Página 16 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
c) O código de item/produto a ser informado no Inventário deverá ser aquele utilizado no mês inventariado.
d) A discriminação do item deve indicar precisamente o mesmo, sendo vedadas discriminações diferentes para o
mesmo item ou discriminações genéricas (a exemplo de "diversas entradas", "diversas saídas", "mercadorias para revenda",
etc), ressalvadas as operações abaixo, desde que não destinada à posterior circulação ou apropriação na produção:
1- de aquisição de "materiais para uso/consumo" que não gerem direitos a créditos;
2- que discriminem por gênero a aquisição de bens para o "ativo fixo" (e sua baixa);
3- que contenham os registros consolidados relativos aos contribuintes com atividades econômicas de
fornecimento de energia elétrica, de fornecimento de água canalizada, de fornecimento de gás canalizado, e de
prestação de serviço de comunicação e telecomunicação que poderão, a critério do Fisco, utilizar registros consoli-
dados por classe de consumo para representar suas saídas ou prestações.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0200" C 004 - O
02 COD_ITEM Código do item C 060 - O
03 DESCR_ITEM Descrição do item C - - O
04 COD_BARRA Representação alfanumérico do código de barra do pro- C - - OC
duto, se houver
05 COD_ANT_ITEM Código anterior do item com relação à última informação C 060 - OC
apresentada.
06 UNID_INV Unidade de medida utilizada na quantificação de esto- C 006 - O
ques.
07 TIPO_ITEM Tipo do item – Atividades Industriais, Comerciais e N 2 - O
Serviços:
00 – Mercadoria para Revenda;
01 – Matéria-Prima;
02 – Embalagem;
03 – Produto em Processo;
04 – Produto Acabado;
05 – Subproduto;
06 – Produto Intermediário;
07 – Material de Uso e Consumo;
08 – Ativo Imobilizado;
09 – Serviços;
10 – Outros insumos;
99 – Outras
08 COD_NCM Código da Nomenclatura Comum do Mercosul C 008 - OC
09 EX_IPI Código EX, conforme a TIPI C 003 - OC
10 COD_GEN Código do gênero do item, conforme a Tabela 4.2.1 N 002* - OC
11 COD_LST Código do serviço conforme lista do Anexo I da Lei N 004 OC
Complementar Federal nº 116/03.
12 ALIQ_ICMS Alíquota de ICMS aplicável ao item nas operações inter- N 006 02 OC
nas
Observações:
1. O Código do Item deverá ser preenchido com as informações utilizadas na última ocorrência do período.
2. O campo COD_NCM é obrigatório:
2.1) para empresas industriais e equiparadas a industrial, referente aos itens correspondentes à atividade
fim, ou quando gerarem créditos e débitos de IPI;
2.2) para contribuintes de ICMS que sejam substitutos tributários;
2.3) para empresas que realizarem operações de exportação ou importação.”
3. O campo COD_GEN é obrigatório a todos os contribuintes somente na aquisição de produtos primários.
Nível hierárquico - 2
Ocorrência - vários (por arquivo)
Campo 01 - Valor Válido: [0200]
Campo 02 - Preenchimento: informar com códigos próprios do informante do arquivo os itens das operações de entradas
de mercadorias ou aquisições de serviços, bem como das operações de saídas de mercadorias ou prestações de serviços.
Validação: o valor informado neste campo deve existir em pelo menos um registro dos demais blocos.
Página 16 de 158

--- Página 17 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
Campo 03 - Preenchimento: são vedadas descrições diferentes para o mesmo item ou descrições genéricas, ressalvadas as
operações abaixo, desde que não destinada à posterior circulação ou apropriação na produção:
1- de aquisição de "materiais para uso/consumo" que não gerem direitos a créditos;
2- que discriminem por gênero a aquisição de bens para o "ativo fixo" (e sua baixa);
3- que contenham os registros consolidados relativos aos contribuintes com atividades econômicas de fornecimen-
to de energia elétrica, de fornecimento de água canalizada, de fornecimento de gás canalizado e de prestação de serviço de
comunicação e telecomunicação que poderão, a critério do Fisco, utilizar registros consolidados por classe de consumo para
representar suas saídas ou prestações.
É permitida a modificação da descrição, desde que não implique descaracterização do produto. Neste caso, o campo deve
ser preenchido com a atual descrição utilizada no período. As descrições substituídas devem ser informadas nos registros
0205.
Campo 04 - Preenchimento: informar o código GTIN-8, GTIN-12, GTIN-13 ou GTIN-14 (antigos códigos EAN, UPC e
DUN-14). Não informar o conteúdo do campo se o produto não possui este código.
Campo 05 - Não preencher. Se houver, a informação deve ser prestada no Registro 0205.
Campo 06 - Validação: existindo informação neste campo, esta deve existir no registro 0190, campo UNID, respectivo.
Campo 07 - Preenchimento: informar o tipo do item aplicável. Nas situações de um mesmo código de item possuir mais
de um tipo de item (destinação), deve ser informado o tipo de maior relevância.
Deve ser informada a destinação inicial do produto, considerando-se os conceitos:
00 - Mercadoria para revenda – produto adquirido comercialização;
01 – Matéria-prima: a mercadoria que componha, física e/ou quimicamente, um produto em processo ou produ-
to acabado e que não seja oriunda do processo produtivo. A mercadoria recebida para industrialização é classifi-
cada como Tipo 01, pois não decorre do processo produtivo, mesmo que no processo de produção se produza
mercadoria similar classificada como Tipo 03;
03 – Produto em processo: o produto que possua as seguintes características, cumulativamente: oriundo do pro-
cesso produtivo; e, preponderantemente, consumido no processo produtivo. Dentre os produtos em processo está
incluído o produto resultante caracterizado como retorno de produção (vide conceito de retorno de produção a-
baixo);
04 – Produto acabado: o produto que possua as seguintes características, cumulativamente: oriundo do processo
produtivo; produto final resultante do objeto da atividade econômica do contribuinte; e pronto para ser comercia-
lizado;
05 - Subproduto: o produto que possua as seguintes características, cumulativamente: oriundo do processo pro-
dutivo e não é objeto da produção principal do estabelecimento; tem aproveitamento econômico; não se enquadre
no conceito de produto em processo (Tipo 03) ou de produto acabado (Tipo 04);
06 – Produto intermediário - aquele que, embora não se integrando ao novo produto, for consumido no processo de
industrialização;
Valores válidos: [00, 01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 99]
Campo 08 – Preenchimento: para as empresas industriais ou equiparadas é obrigatório informar o Código NCM conforme
a Nomenclatura Comum do MERCOSUL, de acordo com o Decreto nº 6.006/06.
Para as demais empresas, é obrigatória a informação da NCM para os itens importados, exportados ou, no caso de substitu-
ição tributária, para os itens sujeitos à substituição, quando houver a retenção do ICMS.
Validação: o preenchimento do campo é obrigatório se o campo IND_ATIV do registro 0000 for igual a “0” (zero) (indus-
trial ou equiparado a industrial), mas apenas para os itens correspondentes à atividade fim ou quando gerarem créditos e
débitos de IPI. Fica dispensado o preenchimento deste campo, quando o tipo de item informado no campo TP_ITEM for
igual a 07 - Material de Uso e Consumo; ou 08 – Ativo Imobilizado; ou 09 -Serviços; ou 10 - Outros insumos;
ou 99 - Outras.
Campo 09 - Preenchimento: informar com o Código de Exceção de NCM,de acordo com a Tabela de Incidência do Im-
posto de Produtos Industrializados (TIPI), quando existir.
Campo 10 - Preenchimento: obrigatório para todos os contribuintes na aquisição de produtos primários. A Tabela "Gêne-
ro do Item de Mercadoria/Serviço", referenciada no Item 4.2.1 do Ato COTEPE/ICMS nº 09, de 18 de abril de 2008, cor-
responde à tabela de "Capítulos da NCM", acrescida do código "00 - Serviço".
Validação: o valor informado no campo deve existir na Tabela “Gênero do Item de Mercadoria/Serviço”, item 4.2.1 do
Ato COTEPE/ICMS nº 09, de 18 de abril de 2008.
Campo 11 - Preenchimento: informar o código de serviços, de acordo com a Lei Complementar 116/03.
Página 17 de 158

--- Página 18 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
Campo 12 - Preenchimento: neste campo deve ser informada a alíquota prevista em regulamento, em operações de saída
interna.
REGISTRO 0205: ALTERAÇÃO DO ITEM
Este registro tem por objetivo informar alterações ocorridas na descrição do produto, desde que não o descaracterize ou
haja modificação que o identifique como sendo novo produto, caso não tenha ocorrido movimentação no período da altera-
ção do item, deverá ser informada no primeiro período em que houver movimentação do item.
Não podem ser informados dois ou mais registros com sobreposição de períodos.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0205" C 004 - O
02 DESCR_ANT_ITEM Descrição anterior do item C - - O
03 DT_INI Data inicial de utilização da descrição do item N 008* - O
04 DT_FIM Data final de utilização da descrição do item N 008* - O
05 COD_ANT_ITEM Código anterior do item com relação à última informa- C 060 - O
ção apresentada.
Observações:
Nível hierárquico - 3
Ocorrência - 1:N
Campo 01 - Valor Válido: [0205]
Campo 03 - Preenchimento: informar a data inicial de utilização da descrição anterior do item.
Validação: o valor informado no campo deve ser uma data válida no formato “ddmmaaaa”.
Campo 04 - Preenchimento: informar o período final de utilização da descrição anterior do item.
Validação: o valor informado no campo deve ser uma data válida, obedecido o formato “ddmmaaaa”. O valor informado
no campo deve ser menor que o valor no campo DT_FIN do registro 0000.
REGISTRO 0206: CÓDIGO DE PRODUTO CONFORME TABELA PUBLICA-
DA PELA ANP (COMBUSTÍVEIS)
Este registro tem por objetivo informar o código correspondente ao produto constante na Tabela da Agência Nacional de
Petróleo (ANP) para os produtos denominados “Combustíveis”.
Deve ser apresentado apenas pelos contribuintes produtores, importadores e distribuidores de combustíveis.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0206" C 004 - O
02 COD_COMB Código do combustível, conforme tabela publicada pela C - - O
ANP
Observações:
Nível hierárquico - 3
Ocorrência - 1:1
Campo 01 - Valor Válido: [0206]
Campo 02 - Preenchimento: utilizar o código do combustível, conforme Tabela de Produtos para Combustíveis / Solvente
(Tabela 12 de códigos de produtos para o Sistema de Informações de Movimentação de Produtos (SIMP)), conforme item
3.2.1 do Ato COTEPE/ICMS nº 09, de 18 de abril de 2008.
Validação: o valor informado no campo deve existir na tabela da ANP.
Perguntas e Respostas
1) Há algum relacionamento com o campo TIPO_ITEM do registro 0200?
Resposta: Sim, esta informação é vinculada ao código do item e obrigatória quando o produto se referir a combustíveis.
Página 18 de 158

--- Página 19 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
REGISTRO 0220: FATORES DE CONVERSÃO DE UNIDADES
Este registro tem por objetivo informar os fatores de conversão dos itens discriminados na Tabela de Identificação do Item
(Produtos e Serviços) entre a unidade informada no registro 0200 e as unidades informadas nos registros dos documentos
fiscais.
Quando for utilizada unidade de inventário diferente da unidade comercial do produto é necessário informar o registro
0220, fatores de conversão de unidades, para informar os fatores de conversão entre as unidades.
Não podem ser informados dois ou mais registros com o mesmo conteúdo no campo UNID_CONV.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0220" C 004 - O
02 UNID_CONV Unidade comercial a ser convertida na unidade de esto- C 006 - O
que, referida no registro 0200.
03 FAT_CONV Fator de conversão: fator utilizado para converter (multi- N - 6 O
plicar) a unidade a ser convertida na unidade adotada no
inventário.
Observações:
Nível hierárquico - 3
Ocorrência - 1:N
Campo 01 - Valor Válido: [0220]
Campo 02 - Validação: o valor informado no campo deve existir no campo UNID do registro 0190.
Campo 03 - Validação: o valor informado no campo deve ser maior que “0” (zero).
Perguntas e Respostas
1) Neste registro é demonstrada a conversão de unidade de medidas adotada no inventário final, por essa razão, ele deve ser
gerado todo mês ou quando for entregue o bloco H?
Resposta: Este registro deve ser entregue independentemente da apresentação do Bloco H.
REGISTRO 0300: CADASTRO DE BENS OU COMPONENTES DO ATIVO
IMOBILIZADO
Este registro tem o objetivo de identificar e caracterizar todos os bens ou componentes arrolados no Registro G125 do Blo-
co G.
Só devem ser apresentados registro 0300 que sejam referenciados no bloco G.
Nº Campo Descrição tipo tam Dec O-
brig
01 REG Texto fixo contendo "0300" C 004* - O
02 COD_IND_BEM Código individualizado do bem ou componente ado- C 015 - O
tado no controle patrimonial do estabelecimento
informante
03 IDENT_MERC Identificação do tipo de mercadoria: C 001* - O
1 = bem;
2 = componente.
04 DESCR_ITEM Descrição do bem ou componente (modelo, marca e C 060 - O
outras características necessárias a sua individualiza-
ção)
05 COD_PRNC Código de cadastro do bem principal nos casos em C 015 - OC
que o bem ou componente ( campo 02) esteja vincu-
lado a um bem principal.
06 COD_CTA Código da conta analítica de contabilização do bem C 060 - O
ou componente (campo 06 do Registro 0500)
07 NR_PARC Número total de parcelas a serem apropriadas, se- N 003 - O
Página 19 de 158

--- Página 20 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
gundo a legislação de cada unidade federada
Observações:
Nível hierárquico - 2
Ocorrência – Vários (por arquivo)
O bem ou componente deverá ter código individualizado, atribuído pelo contribuinte em seu controle patrimonial do ativo
imobilizado.
O código do bem ou componente não pode ser duplicado ou atribuído a bens ou componentes diferentes.
Não é permitida a reutilização de código que tenha sido atribuído a qualquer bem ou componente anteriormente.
A discriminação do bem ou componente deve indicar precisamente o mesmo, sendo vedadas discriminações diferentes para
o mesmo bem ou componente no mesmo período ou discriminações genéricas.
As informações nos campos IDENT_MERC, DESCR_ITEM, COD_PRNC e COD_CTA devem se referir às características
atuais do bem ou componente.
Campo 01 - Valor Válido: [0300]
Campo 03: Preenchimento:
a) bem: uma mercadoria será considerada “bem” quando possua todas as condições necessárias para ser utilizado
nas atividades operacionais do estabelecimento. Incluem-se no conceito de bem:
a.1) o bem construído no estabelecimento do contribuinte;
a.2) a parte de um bem móvel principal que possua todas as condições necessárias para ser utilizado nas atividades
operacionais do estabelecimento, tendo em vista que essa parte possui vida útil diferenciada;
a.3) a parte de um bem principal móvel que será utilizada exclusivamente como sobressalente, desde que a par-
te a ser substituída tenha sido imobilizada individualmente;
a.4) a parte de um bem principal móvel, que será agregada a este, desde que essa parte melhore as condições e
amplie a vida útil econômica originalmente estimada para o referido bem;
a.5) a utilização de uma mercadoria originada do Estoque do Ativo Circulante, tendo em vista que normalmente é
destinada à revenda ou ao consumo na produção ou ao uso ou ao consumo, mas que será agregada ao imobilizado.
b) componente: uma mercadoria será considerada “componente” quando fizer parte de um bem móvel que esti-
ver sendo construído no estabelecimento do contribuinte.
Campo 05: código do bem que esteja vinculado ao bem ou componente informado no campo 02, seja por se tratar:
a) de uma imobilização em andamento – código do bem resultante;
b) de um bem vinculado a um bem principal – código do bem principal.
Validação:
a) se o conteúdo do campo IDENT_MERC for igual a “2”, este campo deve obrigatoriamente estar preenchido, com
o código do bem principal;
b) O conteúdo deste campo deve existir em outro registro no campo COD_IND_BEM que não tenha o campo I-
DENT_MERC igual a “2”.
Campo 06: Preenchimento: conta contábil de acordo com o Plano de Contas adotado pela empresa.
Validações: o conteúdo informado deve existir no campo COD_CTA, e ser conta do ativo (COD_NAT_CC igual a “01”),
ambos do Registro 0500 ;
Campo 07: número total de parcelas a serem apropriadas, segundo a legislação de cada Unidade Federada. A maioria das
Unidades Federadas adota o número total de parcelas definidas na Lei Complementar 87/96 – 48 parcelas. Entretanto, al-
gumas Unidades Federadas podem definir um número total de parcelas diferente, seja em função da periodicidade de apu-
ração do ICMS ou até mesmo em função de um determinado bem.
REGISTRO 0305 – INFORMAÇÃO SOBRE A UTILIZAÇÃO DO BEM
Este registro tem o objetivo de prestar informações sobre a utilização do bem, sendo obrigatório quando o conteúdo do
campo IDENT_MERC do Registro 0300 for igual a “1” e quando o informante estiver situado em UF que considere o
critério do termo inicial de apropriação do crédito somente quando o bem estiver pronto para ser utilizado ou no caso da
UF assim o exigir.
Página 20 de 158

--- Página 21 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
Nº Campo Descrição Tipo Tam Dec Obrig
01 Texto fixo contendo "0305" C 004* - O
REG
02 COD_CTA_DEPR Código da conta analítica de contabilização da depreciação C 060 - O
acumulada do bem (campo 06 do Registro 0500)
03 DT_DEPR_INI Data de início de depreciação do bem N 008* - O
04 COD_CCUS Código do centro de custo onde está localizado o bem (campo C 060 - O
03 do Registro 0600)
05 VIDA_UTIL Vida útil estimada do bem, em número de meses N - - O
Observações:
Nível hierárquico - 3
Ocorrência – 1:1
Campo 01 - Valor Válido: [0305]
Campo 03 - Preenchimento: informar no padrão “diamêsano” (ddmmaaaa), excluindo-se quaisquer caracteres de separa-
ção, tais como: ".", "/", "-".
Campo 04: caso o contribuinte não adote centros de custos deverão ser informados os seguintes códigos:
a) tratando-se de atividade econômica comercial ou de serviços:
Código 01: área operacional;
Código 02: área administrativa;
b) tratando-se de atividade econômica industrial:
Código 01: área produtiva;
Código 02: área de apoio à produção;
Código 03: área administrativa.
Validação: o conteúdo informado deve existir no campo COD_CTA do Registro 0500.
REGISTRO 0400: TABELA DE NATUREZA DA OPERAÇÃO/PRESTAÇÃO
Este registro tem por objetivo codificar os textos das diferentes naturezas da operação/prestação discriminadas nos docu-
mentos fiscais. Esta codificação e suas descrições são livremente criadas e mantidas pelo contribuinte.
Este registro não se refere ao CFOP. Algumas empresas utilizam outra classificação além das apresentados nos CFOP.
Esta codificação permite informar estes agrupamentos próprios.
Não podem ser informados dois ou mais registros com o mesmo conteúdo no campo COD_NAT
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0400" C 004 - O
02 COD_NAT Código da natureza da operação/prestação C 010 - O
03 DESCR_NAT Descrição da natureza da operação/prestação C - - O
Observações:
Nível hierárquico - 2
Ocorrência – vários por arquivo
Campo 01 - Valor Válido: [0400]
Campo 02 - Validação: o valor informado no campo COD_NAT deve existir em pelo menos um registro dos demais blo-
cos.
REGISTRO 0450: TABELA DE INFORMAÇÃO COMPLEMENTAR DO DO-
CUMENTO FISCAL
Este registro tem por objetivo codificar todas as informações complementares dos documentos fiscais, exigidas pela legis-
lação fiscal. Estas informações constam no campo “Dados Adicionais” dos documentos fiscais.
Esta codificação e suas descrições são livremente criadas e mantidas pelo contribuinte.
Não podem ser informados dois ou mais registros com o mesmo conteúdo no campo COD_INF.
Página 21 de 158

--- Página 22 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
Deverão ser informadas todas as Informações Complementares de interesse do fisco existentes nos documentos fiscais
emitidos. Exemplo: nos casos de documentos fiscais de entradas, informar as referências a um outro documento fiscal.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0450" C 004 - O
02 COD_INF Código da informação complementar do documento C 006 - O
fiscal.
03 TXT Texto livre da informação complementar existente no C - - O
documento fiscal, inclusive espécie de normas legais,
poder normativo, número, capitulação, data e demais
referências pertinentes com indicação referentes ao tribu-
to.
Observações:
Nível hierárquico - 2
Ocorrência –vários por arquivo
Campo 01 - Valor Válido: [0450]
Campo 02 - Validação: o valor informado deve existir em pelo menos um registro dos demais Blocos.
REGISTRO 0460: TABELA DE OBSERVAÇÕES DO LANÇAMENTO FISCAL
Este registro é utilizado para informar anotações de escrituração determinadas pela legislação pertinente aos lançamentos
fiscais, tais como: ajustes efetuados por diferimento parcial de imposto, antecipações, diferencial de alíquota e outros.
Esta codificação e suas descrições são de atribuição do contribuinte.
Não podem ser informados dois ou mais registros com o mesmo conteúdo no campo COD_OBS.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "0460" C 004 - O
02 COD_OBS Código da Observação do lançamento fiscal. C 006 - O
03 TXT Descrição da observação vinculada ao lançamento fiscal C - - O
Observações:
Nível hierárquico - 2
Ocorrência –vários por arquivo
Campo 01 - Valor Válido: [0460]
Campo 02 -Validação: o valor informado neste campo deve existir em pelo menos um registro dos demais Blocos.
Campo 03 - Preenchimento: este campo corresponde às informações lançadas na coluna “Observação” dos Livros Fiscais
de Entradas, Saídas e de Apuração, de acordo com o estabelecido na legislação de cada unidade federada.
REGISTRO 0500: PLANO DE CONTAS CONTÁBEIS
Este registro tem o objetivo de identificar as contas contábeis utilizadas pelo contribuinte informante em sua Contabilidade
Geral, no que se refere às contas referenciadas nos registros 0300, 0305, C170, C300, C350, C510, C610, D100, D300,
D400, D500, D510, D610, H010 e 1510.
Não podem ser informados dois ou mais registros com a mesma combinação de conteúdo nos campos DT_ALT e
COD_CTA.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo “0500” C 004* - O
02 DT_ALT Data da inclusão/alteração N 008* - O
Página 22 de 158

--- Página 23 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
03 COD_ NAT_CC Código da natureza da conta/grupo de contas: C 002* - O
01 - Contas de ativo;
02 - Contas de passivo;
03 - Patrimônio líquido;
04 - Contas de resultado;
05 - Contas de compensação;
09 - Outras.
04 IND_CTA Indicador do tipo de conta: C 001* - O
S - Sintética (grupo de contas);
A - Analítica (conta).
05 NÍVEL Nível da conta analítica/grupo de contas. N 002 - O
06 COD_CTA Código da conta analítica/grupo de contas. C 60 - O
07 NOME_CTA Nome da conta analítica/grupo de contas. C 60 - O
Observações:
Nível hierárquico - 2
Ocorrência - vários (por arquivo)
Campo 01 - Valor Válido: [0500];
Campo 02 - Preenchimento: informar no padrão “diamêsano” (ddmmaaaa), excluindo-se quaisquer caracteres de separa-
ção, tais como: ".", "/", "-".
Validação: a data não pode ser maior que a constante no campo DT_FIN.
Campo 03:Valores Válidos: [01, 02, 03, 04, 05, 09];
Campo 04:Valores Válidos: [S, A];
REGISTRO 0600: CENTRO DE CUSTOS
Este registro tem o objetivo de identificar os centros de custos referenciados no Registro 0305.
Não podem ser informados dois ou mais registros com a mesma combinação de conteúdo nos campos DT_ALT e
COD_CCUS.
Nº Campo Descrição tipo TAM Dec Obrig
01 REG Texto fixo contendo “0600”. C 004* - O
02 DT_ALT Data da inclusão/alteração. N 008* - O
03 COD_CCUS Código do centro de custos. C 060 - O
04 CCUS Nome do centro de custos. C 060 - O
Observações:
Nível hierárquico - 2
Ocorrência - vários (por arquivo)
Campo 01 - Valor Válido: [0600].
Campo 02 - Preenchimento: informar no padrão “diamêsano” (ddmmaaaa), excluindo-se quaisquer caracteres de separa-
ção, tais como: ".", "/", "-".
Validação: a data não pode ser maior que a constante no campo DT_FIN.
REGISTRO 0990: ENCERRAMENTO DO BLOCO 0
Este registro tem por objetivo identificar o encerramento do bloco 0 e informar a quantidade de linhas (registros) existentes
no bloco.
Nº Campo Descrição Tipo Tam Dec Obrig
Página 23 de 158

--- Página 24 ---
Guia Prático EFD – Versão 2.0.0
Atualização: 17 de dezembro de 2009
01 REG Texto fixo contendo "0990" C 004 - O
02 QTD_LIN_0 Quantidade total de linhas do Bloco 0 N - - O
Observações:
Nível hierárquico - 1
Ocorrência – um por arquivo
Campo 01 - Valor Válido: [0990]
Campo 02 - Preenchimento: a quantidade de linhas (registros) a ser informada deve considerar também os próprios regis-
tros de abertura e encerramento do bloco. Para este cálculo, o registro 0000, mesmo não pertencendo ao bloco 0, deve ser
somado.
Validação: o número de linhas (registros) existentes no bloco 0 é igual ao valor informado neste campo.
BLOCO C: DOCUMENTOS FISCAIS I - MERCADORIAS (ICMS/IPI)
REGISTRO C001: ABERTURA DO BLOCO C
Este registro tem por objetivo identificar a abertura do bloco C, indicando se há informações sobre documentos fiscais.
Nº Campo Descrição Tipo Tam Dec Obrig
01 REG Texto fixo contendo "C001" C 004 - O
02 IND_MOV Indicador de movimento: C 001 - O
0- Bloco com dados informados;
1- Bloco sem dados informados
Observações:
Nível hierárquico - 1
Ocorrência - um por arquivo
Campo 01 - Valor válido: [C001]
Campo 02 - Valores válidos: [0, 1]
Validação: se o valor deste campo for igual a “1” (um), somente podem ser informados os registros de abertura e encerra-
mento do bloco. Se o valor neste campo for igual a “0” (zero), deve ser informado pelo menos um registro além dos regis-
tros de abertura e encerramento do bloco.
REGISTRO C100: NOTA FISCAL (CÓDIGO 01), NOTA FISCAL AVULSA
(CÓDIGO 1B), NOTA FISCAL DE PRODUTOR (CÓDIGO 04) E NFE (CÓDIGO
55).
Este registro deve ser gerado para cada documento fiscal código 01, 1B, 04 e 55, conforme item 4.1.1 do Ato COTE-
PE/ICMS nº 09, de 18 de abril de 2008, registrando a entrada ou saída de produtos ou outras situações que envolvam a
emissão dos documentos fiscais mencionados.
Para cada registro C100, obrigatoriamente deve ser apresentado, pelo menos, um registro C170 e um registro
C190, observadas as exceções abaixo relacionadas:
Exceção 1: Para documentos (inclusive NF-e) com código de situação (campo COD_SIT) cancelado (código “02”), cance-
lado extemporâneo (código “03”), Nota Fiscal Eletrônica (NF-e) denegada (código “04”) ou numeração inutilizada (código
“05”), preencher somente os campos REG, IND_OPER, IND_EMIT, COD_MOD, COD_SIT, SER e NUM_DOC. Demais
campos deverão ser apresentados com conteúdo VAZIO “||”. Não informar registros filhos.
Exceção 2: Notas Fiscais Eletrônicas - NF-e de emissão própria: neste caso, devem ser apresentados somente os registros
C100 e C190, e, se existirem ajustes de documento fiscal determinados por legislação estadual (tabela 5.3 do Ato COTEPE
ICMS 09/08), devem ser apresentados também os registros C195 e C197;
Exceção 3: Notas Fiscais Complementares e Notas Fiscais Complementares Extemporâneas (campo COD_SIT igual a
“06” ou “07”): nesta situação, somente os campos REG, IND_EMIT, COD_PART, COD_MOD, COD_SIT, NUM_DOC e
DT_DOC são de preenchimento obrigatório, devendo ser preenchida a data de efetiva saída, para os contribuintes das UFs
que utilizam a data de saída para a apuração. Os demais campos são facultativos (se forem preenchidos inclusive com valo-
res iguais a zero, serão validados e aplicadas as regras de campos existentes). O registro C190 é sempre obrigatório e deve
Página 24 de 158

